--- a/DesignerRHN/DesignerRHN-war/web/Barra.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Barra.xhtml
@@ -35,7 +35,7 @@
                             </fieldset>
 
 
-                            <p:panel style="border: none;">
+                            <p:panel id="panelLiquidacion" style="border: none;">
                                 <fieldset style="position: absolute; left: 10px; top: 172px; ; width: 470px; height: 110px; border: inset; border-width: 2px">
                                     <h:outputText value="#{msg['fechai']}" style="font-weight: bold; position: absolute; top: 10px; left: 20px"/>
                                     <p:inputText value="#{controlBarra.parametroEstructura.fechadesdecausado}" style="position: absolute; left: 20px; width: 80px; top: 30px" readonly="true">
