--- a/DesignerRHN/DesignerRHN-war/web/busquedaavanzada.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/busquedaavanzada.xhtml
@@ -2728,7 +2728,7 @@
                         </p:commandButton>
                     </p:dialog>
 
-                    <p:dialog header="#{msg['reformaLaboralD']}Reformas Laborales" widgetVar="ReformaLaboralTipoSalarioDialogo" draggable="false" resizable="false" closable="false" id="ReformaLaboralTipoSalarioDialogo"  
+                    <p:dialog header="#{msg['reformaLaboralD']}" widgetVar="ReformaLaboralTipoSalarioDialogo" draggable="false" resizable="false" closable="false" id="ReformaLaboralTipoSalarioDialogo"  
                               showEffect="fade" hideEffect="fade" width="435" modal="true" style="font-size: 11px;">
                         <p:dataTable id="lovReformaLaboralTipoSalario" style="font-size: 11px; width: 405px" scrollWidth="420" var="reformaLTS" value="#{controlBusquedaAvanzada.lovReformasLaborales}" rowKey="#{reformaLTS.secuencia}"
                                      selection="#{controlBusquedaAvanzada.reformaLaboralSeleccionada}" selectionMode="single" widgetVar="lovReformaLaboralTipoSalario" scrollable="true" scrollHeight="250" 
