--- a/DesignerRHN/DesignerRHN-war/web/resources/linkare/calendar.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/resources/linkare/calendar.xhtml
@@ -32,6 +32,7 @@
         <cc:clientBehavior name="select" targets="calendar" event="select" />
         <cc:clientBehavior name="change" targets="calendar" event="change" />
         <cc:clientBehavior name="click" targets="calendar" event="click"/>
+        <cc:clientBehavior name="focus" targets="calendar" event="focus"/>
 
     </cc:interface>
 
