--- a/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
@@ -14,7 +14,7 @@
                     <p:growl id="growl" showDetail="true"/>
 
                     <p:panel  id="PanelTotal" style="position: absolute; width: 874px; height: 510px; text-align: left;background-color: white">
-
+                        <p:commandButton actionListener="#{controlPruebasUnitarias.descargarArchivoFTP()}" value="Descargar" style="position: absolute; top: 200px; left: 300px" process="@this"/>
                     </p:panel>   
                 </h:form>
             </ui:define>
