--- a/DesignerRHN/DesignerRHN-war/web/interfasecontabletotal.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/interfasecontabletotal.xhtml
@@ -282,7 +282,7 @@
                             <legend style=" color: blue;text-align:left"><strong>#{msg['intercontotal']}</strong></legend>
 
                             <p:dataTable id="datosIntercon" var="infoI" rowKey="#{infoI.secuencia}" rowIndexVar="indiceI" style="width: 814px; border: 1px;"                           
-                                         value="#{controlInterfaseContableTotal.listaInterconTotal}" scrollable="true" scrollHeight="#{controlInterfaseContableTotal.altoTablaGenerada}" scrollWidth="830"
+                                         value="#{controlInterfaseContableTotal.listaInterconTotal}" scrollable="true" scrollHeight="#{controlInterfaseContableTotal.altoTablaIntercon}" scrollWidth="830"
                                          filteredValue="#{controlInterfaseContableTotal.filtrarListaInterconTotal}" emptyMessage="#{msg['vacio']}"
                                          editable="true" editMode="cell" liveScroll="true" scrollRows="25"
                                          selection="#{controlInterfaseContableTotal.interconTablaSeleccionada}" selectionMode="single">
