--- a/DesignerRHN/DesignerRHN-war/web/interfasecontablesapbopq.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/interfasecontablesapbopq.xhtml
@@ -289,7 +289,7 @@
                             <legend style=" color: blue;text-align:left"><strong>#{msg['contabilizadosSAP']}</strong></legend>
 
                             <p:dataTable id="datosIntercon" var="infoI" rowKey="#{infoI.secuencia}" rowIndexVar="indiceI" style="width: 814px; border: 1px;"                           
-                                         value="#{controlInterfaseContableSapBOPQ.listaInterconSapBO}" scrollable="true" scrollHeight="#{controlInterfaseContableSapBOPQ.altoTablaGenerada}" scrollWidth="830"
+                                         value="#{controlInterfaseContableSapBOPQ.listaInterconSapBO}" scrollable="true" scrollHeight="#{controlInterfaseContableSapBOPQ.altoTablaIntercon}" scrollWidth="830"
                                          filteredValue="#{controlInterfaseContableSapBOPQ.filtrarListaInterconSapBO}" emptyMessage="#{msg['vacio']}"
                                          editable="true" editMode="cell" liveScroll="true" scrollRows="25"
                                          selection="#{controlInterfaseContableSapBOPQ.interconTablaSeleccionada}" selectionMode="single">
